--- a/Malakh-chess-engine.vcxproj.filters
+++ b/Malakh-chess-engine.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="src\pieces\rook.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\uci.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\game.h">
@@ -81,6 +84,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\pieces\pieces.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\uci.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
