--- a/Malakh-chess-engine.vcxproj.filters
+++ b/Malakh-chess-engine.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="src\ai.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Board\evaluation.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\game.h">
@@ -72,6 +75,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\ai.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Board\evaluation.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
