--- a/Malakh-chess-engine.vcxproj.filters
+++ b/Malakh-chess-engine.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="src\Board\evaluation.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Board\transpositions.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\game.h">
@@ -78,6 +81,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\Board\evaluation.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Board\transpositions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
