added print methods for debugging purposes

--- a/Malakh-chess-engine.vcxproj
+++ b/Malakh-chess-engine.vcxproj
@@ -100,6 +100,7 @@
   <ItemGroup>
     <ClCompile Include="src\bitboard.cpp" />
     <ClCompile Include="src\board.cpp" />
+    <ClCompile Include="src\chess.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\mobility.cpp" />
     <ClCompile Include="src\moveGenerator.cpp" />
