--- a/Malakh-chess-engine.vcxproj.filters
+++ b/Malakh-chess-engine.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="src\mobility.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\chess.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\bitboard.h">
