--- a/Malakh-chess-engine.vcxproj
+++ b/Malakh-chess-engine.vcxproj
@@ -100,7 +100,8 @@
   <ItemGroup>
     <ClCompile Include="src\bitboard.cpp" />
     <ClCompile Include="src\board.cpp" />
-    <ClCompile Include="src\chess.cpp" />
+    <ClCompile Include="src\piece.cpp" />
+    <ClCompile Include="src\evaluation.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\mobility.cpp" />
     <ClCompile Include="src\moveGenerator.cpp" />
@@ -109,7 +110,8 @@
   <ItemGroup>
     <ClInclude Include="src\bitboard.h" />
     <ClInclude Include="src\board.h" />
-    <ClInclude Include="src\chess.h" />
+    <ClInclude Include="src\piece.h" />
+    <ClInclude Include="src\evaluation.h" />
     <ClInclude Include="src\mobility.h" />
     <ClInclude Include="src\search.h" />
   </ItemGroup>
