added hashing and transpositions

--- a/Malakh-chess-engine.vcxproj
+++ b/Malakh-chess-engine.vcxproj
@@ -100,20 +100,24 @@
   <ItemGroup>
     <ClCompile Include="src\bitboard.cpp" />
     <ClCompile Include="src\board.cpp" />
+    <ClCompile Include="src\hashing.cpp" />
     <ClCompile Include="src\piece.cpp" />
     <ClCompile Include="src\evaluation.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\mobility.cpp" />
     <ClCompile Include="src\moveGenerator.cpp" />
     <ClCompile Include="src\search.cpp" />
+    <ClCompile Include="src\transpositions.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\bitboard.h" />
     <ClInclude Include="src\board.h" />
+    <ClInclude Include="src\hashing.h" />
     <ClInclude Include="src\piece.h" />
     <ClInclude Include="src\evaluation.h" />
     <ClInclude Include="src\mobility.h" />
     <ClInclude Include="src\search.h" />
+    <ClInclude Include="src\transpositions.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
