integrated project with libpqxx and libtorch

--- a/Malakh-chess-engine.vcxproj
+++ b/Malakh-chess-engine.vcxproj
@@ -69,6 +69,11 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>true</LinkIncremental>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
+    <LibraryPath>$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64)</LibraryPath>
+    <ExternalIncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);C:\Program Files\libtorch\release\include;C:\Program Files\libtorch\release\include\torch\csrc\api\include</ExternalIncludePath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -102,8 +107,14 @@
     <ClCompile>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
-      <AdditionalIncludeDirectories>C:\Program Files\libpqxx\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>
+      </AdditionalIncludeDirectories>
+      <ConformanceMode>Default</ConformanceMode>
     </ClCompile>
+    <Link>
+      <AdditionalLibraryDirectories>C:\Program Files\libtorch\release\lib</AdditionalLibraryDirectories>
+      <AdditionalDependencies>$(CoreLibraryDependencies);%(AdditionalDependencies);asmjit.lib;c10.lib;c10_cuda.lib;caffe2_nvrtc.lib;cpuinfo.lib;dnnl.lib;fbgemm.lib;fbjni.lib;fmt.lib;kineto.lib;libprotobuf.lib;libprotoc.lib;pthreadpool.lib;pytorch_jni.lib;torch.lib;torch_cpu.lib;torch_cuda.lib;XNNPACK.lib;</AdditionalDependencies>
+    </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\bitboard.cpp" />
@@ -116,6 +127,7 @@
     <ClCompile Include="src\mobility.cpp" />
     <ClCompile Include="src\moveGenerator.cpp" />
     <ClCompile Include="src\search.cpp" />
+    <ClCompile Include="src\training.cpp" />
     <ClCompile Include="src\transpositions.cpp" />
     <ClCompile Include="src\uci.cpp" />
   </ItemGroup>
@@ -128,6 +140,7 @@
     <ClInclude Include="src\evaluation.h" />
     <ClInclude Include="src\mobility.h" />
     <ClInclude Include="src\search.h" />
+    <ClInclude Include="src\training.h" />
     <ClInclude Include="src\transpositions.h" />
     <ClInclude Include="src\uci.h" />
   </ItemGroup>
