implemented simulation of games

--- a/trainer/chess-evolved.ini
+++ b/trainer/chess-evolved.ini
@@ -1,4 +1,4 @@
-[malakh]
+[chess-evolved]
 # Pawns
 pawn = p:fmWfceF
 customPiece1 = w:fmW2feF
@@ -26,5 +26,3 @@ queen = q:Q
 king = k:K
 
 #startFen = rnbqkbnr/pppppppp/8/8/8/8/PPPPPPPP/RNBQKBNR w KQkq - 0 1
-#startFen = rnbqkbnr/tttttttt/8/8/8/8/TTTTTTTT/RNBQKBNR w KQkq - 0 1
-startFen = 8/8/8/3U4/8/8/8/8 w
