--- a/Malakh-chess-engine.vcxproj.filters
+++ b/Malakh-chess-engine.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="src\fairyStockfish.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\random.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\bitboard.h">
@@ -99,6 +102,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\fairyStockfish.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\random.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
