--- a/trainer/chess-evolved.ini
+++ b/trainer/chess-evolved.ini
@@ -25,4 +25,18 @@ queen = q:Q
 # Kings
 king = k:K
 
-#startFen = rnbqkbnr/pppppppp/8/8/8/8/PPPPPPPP/RNBQKBNR w KQkq - 0 1
+pawnTypes = pwe
+promotionPawnTypes = pwe
+promotionPawnTypesWhite = pwe
+promotionPawnTypesBlack = pwe
+nMoveRuleTypes = pwe
+nMoveRuleTypesWhite = pwe
+nMoveRuleTypesBlack = pwe
+doubleStep = false
+enPassantTypes = -
+enPassantTypesWhite = -
+enPassantTypesBlack = -
+
+# promotionPieceTypesWhite = nbrq
+# promotionPieceTypesBlack = nbrq
+# startFen = rnbqkbnr/pppppppp/8/8/8/8/PPPPPPPP/RNBQKBNR w KQkq - 0 1
