using newer version of fairystockfish, removed castling and en passant (issues in fairystockfish configuration), implemented training of neural network (still missing split to training and validation data and plots of loss function)

--- a/training/chess-evolved-tmp.ini
+++ b/training/chess-evolved-tmp.ini
@@ -36,10 +36,11 @@ doubleStep = false
 enPassantTypes = -
 enPassantTypesWhite = -
 enPassantTypesBlack = -
+castling = false
 
 # promotionPieceTypesWhite = nbrq
 # promotionPieceTypesBlack = nbrq
 # startFen = rnbqkbnr/pppppppp/8/8/8/8/PPPPPPPP/RNBQKBNR w KQkq - 0 1
 promotionPieceTypesWhite = OUTq
 promotionPieceTypesBlack = aizq
-startFen = ziaqkaiz/eeeeeeee/8/8/8/8/WWWWWWWW/TUOQKOUT w KQkq - 0 1
+startFen = ziaqkaiz/eeeeeeee/8/8/8/8/WWWWWWWW/TUOQKOUT w - - 0 1
