--- a/training/chess-evolved.ini
+++ b/training/chess-evolved.ini
@@ -36,6 +36,7 @@ doubleStep = false
 enPassantTypes = -
 enPassantTypesWhite = -
 enPassantTypesBlack = -
+castling = false
 
 # promotionPieceTypesWhite = nbrq
 # promotionPieceTypesBlack = nbrq
